--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "deepbluev2",
-  "version": "2.3.2",
+  "version": "3.0.0",
   "description": "Discord bot for a chess channel",
   "main": "bot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node bot.js"
   },
   "keywords": [
     "chess"
   ],
-  "author": "Eika",
+  "author": "Eika/lazy",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.2.1",
+    "express": "^4.16.3",
     "request": "^2.83.0"
   }
 }
