Rewrote tracker to make it readable

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "author": "Eika/lazy",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.2.1",
-    "express": "^4.16.3",
-    "request": "^2.83.0"
+    "discord.js": "^11.4.2",
+    "nodemon": "^1.18.4",
+    "request": "^2.88.0"
   }
 }
